# qt-file-analyzer

./: CMakeLists.txt  LICENSE  README.md  fileanalyzer.cpp  fileanalyzer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
